--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -185,9 +185,10 @@ html {
     border: 2px solid #040e36;
     border-radius: 3px;
     box-shadow: 0 2px 2px 0 rgba(4, 14, 54, 0.14), 0 3px 1px -2px rgba(4, 14, 54, 0.12), 0 1px 5px 0 rgba(4, 14, 54, 0.2);
+    box-sizing: border-box;
     font-size: 15px;
-    max-width: 300px;
     margin: 20px auto auto auto;
+    max-width: 500px;
     padding: 0px 20px 0px 20px;
   }
   body main .contactUs h3 {
@@ -237,6 +238,10 @@ html {
   body main .contactUs ul.formWrapper #formSubmit:hover {
     color: #efdf00;
     transition: color 0.3s ease-in-out;
+  }
+  body main .playList {
+    max-width: 500px;
+    margin: auto;
   }
   body main .playList .trackList {
     max-height: 435px;
@@ -317,7 +322,7 @@ html {
   body main .playList li.playList-footer .mobile {
     animation: marquee 10s linear infinite;
     display: block;
-    padding: 15px 0px 10px 10px;
+    padding: 15px 0px 0px 10px;
     white-space: nowrap;
   }
 }
@@ -327,8 +332,9 @@ html {
     border: 2px solid #040e36;
     border-radius: 3px;
     box-shadow: 0 2px 2px 0 rgba(4, 14, 54, 0.14), 0 3px 1px -2px rgba(4, 14, 54, 0.12), 0 1px 5px 0 rgba(4, 14, 54, 0.2);
+    box-sizing: border-box;
     font-size: 15px;
-    max-width: 500px;
+    max-width: 1000px;
     margin: 20px auto auto auto;
     padding: 0px 20px 0px 20px;
   }
@@ -384,13 +390,17 @@ html {
     letter-spacing: normal;
     word-spacing: normal;
   }
+  body main .playList {
+    margin: auto;
+    max-width: 1000px;
+  }
   body main .playList .trackList {
     max-height: 650px;
     overflow-y: auto;
   }
   body main .playList .trackList .albumTitle {
-    flex: 1 1 26%;
-    text-align: left;
+    flex: 1 1 27%;
+    text-align: center;
   }
   body main .playList .trackList .artistTitle {
     flex: 1 1 16%;
@@ -399,11 +409,12 @@ html {
   body main .playList .trackList .songDuration {
     flex: 1 1 12%;
     order: 4;
-    text-align: right;
+    text-align: center;
   }
   body main .playList .trackList .songTitle {
-    flex: 1 0 45%;
+    flex: 1 0 44%;
     flex-direction: row;
+    text-align: left;
   }
   body main .playList li {
     display: flex;
@@ -412,7 +423,7 @@ html {
   }
   body main .playList li.playList-header .albumTitle {
     flex: 1 1 26%;
-    text-align: left;
+    text-align: center;
   }
   body main .playList li.playList-header .artistTitle {
     flex: 1 1 16%;
@@ -421,7 +432,7 @@ html {
   body main .playList li.playList-header .songDuration {
     flex: 1 1 12%;
     order: 4;
-    text-align: right;
+    text-align: center;
   }
   body main .playList li.playList-header .songTitle {
     flex: 1 1 45%;
@@ -431,9 +442,6 @@ html {
   body main .playList li.playList-footer {
     display: flex;
     justify-content: space-between;
-  }
-  body main .playList li.playList-footer div.controls {
-    flex-grow: 1;
   }
   body main .playList li.playList-footer div.mobile {
     display: none;
