minor styling changes to contactUs form

--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -258,11 +258,13 @@ html {
                 padding: 0px 20px 0px 20px;
 
                 h3 {
+                    margin-bottom: 30px;
                     text-align: center;
                 }
 
                 p {
-                    text-align: left;
+                    margin: auto auto 40px auto;
+                    text-align: center;
                 }
 
                 ul.formWrapper {
@@ -436,15 +438,20 @@ html {
                 padding: 0px 20px 0px 20px;
 
                 h3 {
+                    margin-bottom: 30px;
                     text-align: center;
                 }
 
                 p {
-                    text-align: left;
+                    margin: auto auto 40px auto;
+                    max-width: 800px;
+                    text-align: center;
                 }
 
                 ul.formWrapper {
                     list-style-type: none;
+                    margin: auto;
+                    max-width: 800px;
                     padding: 0px;
 
                     li {
@@ -560,12 +567,19 @@ html {
                     display: flex;
                     justify-content: space-between;
 
+                    .controls {
+                        flex: 1 1 25%;
+                        text-align: center;
+                    }
+
                     div.mobile {
                         display: none;
                     }
 
                     .desktop {
                         display: block;
+                        flex: 1 1 75%;
+                        text-align: center;
                     }
 
                     .material-icons {
