--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -411,7 +411,7 @@ html {
   }
   body main .playList .trackList .artistTitle {
     flex: 1 1 16%;
-    text-align: left;
+    text-align: center;
   }
   body main .playList .trackList .songDuration {
     flex: 1 1 12%;
@@ -421,7 +421,7 @@ html {
   body main .playList .trackList .songTitle {
     flex: 1 0 44%;
     flex-direction: row;
-    text-align: left;
+    text-align: center;
   }
   body main .playList li {
     display: flex;
@@ -429,12 +429,12 @@ html {
     flex-wrap: wrap;
   }
   body main .playList li.playList-header .albumTitle {
-    flex: 1 1 26%;
+    flex: 1 1 27%;
     text-align: center;
   }
   body main .playList li.playList-header .artistTitle {
     flex: 1 1 16%;
-    text-align: left;
+    text-align: center;
   }
   body main .playList li.playList-header .songDuration {
     flex: 1 1 12%;
@@ -442,9 +442,9 @@ html {
     text-align: center;
   }
   body main .playList li.playList-header .songTitle {
-    flex: 1 1 45%;
+    flex: 1 1 44%;
     flex-direction: row;
-    text-align: left;
+    text-align: center;
   }
   body main .playList li.playList-footer {
     display: flex;
