--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -516,7 +516,7 @@ html {
 
                     .artistTitle {
                         flex: 1 1 16%;
-                        text-align: left;
+                        text-align: center;
                     }
 
                     .songDuration {
@@ -528,7 +528,7 @@ html {
                     .songTitle {
                         flex: 1 0 44%;
                         flex-direction: row;
-                        text-align: left;
+                        text-align: center;
                     }
                 }
 
@@ -541,13 +541,13 @@ html {
 
                 li.playList-header {
                     .albumTitle {
-                        flex: 1 1 26%;
+                        flex: 1 1 27%;
                         text-align: center;
                     }
 
                     .artistTitle {
                         flex: 1 1 16%;
-                        text-align: left;
+                        text-align: center;
                     }
 
                     .songDuration {
@@ -557,9 +557,9 @@ html {
                     }
 
                     .songTitle {
-                        flex: 1 1 45%;
+                        flex: 1 1 44%;
                         flex-direction: row;
-                        text-align: left;
+                        text-align: center;
                     }
                 }
 
