--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -322,28 +322,28 @@ html {
                     max-height: 435px;
                     overflow-y: auto;
 
-                    .albumTitle {
+                    .album {
                         align-self: flex-end;
                         flex: 1 1 60%;
                         font-size: 13px;
                         text-align: right;
                     }
 
-                    .artistTitle {
+                    .artist {
                         align-self: flex-end;
                         flex: 1 1 40%;
                         font-size: 13px;
                         text-align: left;
                     }
 
-                    .songDuration {
+                    .duration {
                         align-self: flex-start;
                         flex: 1 1 10%;
                         font-size: 10px;
                         text-align: right;
                     }
 
-                    .songTitle {
+                    .title {
                         align-self: flex-start;
                         flex-direction: row;
                         flex: 1 1 90%;
@@ -353,7 +353,7 @@ html {
                 }
 
                 li.playList-header {
-                    .albumTitle {
+                    .album {
                         align-self: flex-end;
                         flex: 1 1 40%;
                         font-size: 13px;
@@ -361,7 +361,7 @@ html {
                         text-align: right;
                     }
 
-                    .artistTitle {
+                    .artist {
                         align-self: flex-end;
                         flex: 1 1 40%;
                         font-size: 13px;
@@ -369,7 +369,7 @@ html {
                         text-align: left;
                     }
 
-                    .songDuration {
+                    .duration {
                         align-self: flex-start;
                         flex: 1 1 40%;
                         font-size: 10px;
@@ -377,7 +377,7 @@ html {
                         text-align: right;
                     }
 
-                    .songTitle {
+                    .title {
                         align-self: flex-start;
                         flex: 1 1 40%;
                         flex-direction: row;
@@ -509,23 +509,23 @@ html {
                     max-height: 650px;
                     overflow-y: auto;
 
-                    .albumTitle {
+                    .album {
                         flex: 1 1 27%;
                         text-align: center;
                     }
 
-                    .artistTitle {
+                    .artist {
                         flex: 1 1 16%;
                         text-align: center;
                     }
 
-                    .songDuration {
+                    .duration {
                         flex: 1 1 12%;
                         order: 4;
                         text-align: center;
                     }
 
-                    .songTitle {
+                    .title {
                         flex: 1 1 44%;
                         flex-direction: row;
                         text-align: center;
