--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -390,6 +390,13 @@ html {
                 li.playList-footer {
                     text-align: center;
                     overflow: hidden;
+                    padding: 15px 10px;
+
+                    .controls {
+                        p {
+                            margin: 15px 0px 0px 0px;
+                        }
+                    }
 
                     .controls, .mobile {
                         flex-basis: 100%;
@@ -542,10 +549,15 @@ html {
                 li.playList-footer {
                     display: flex;
                     justify-content: space-between;
+                    padding-bottom: 15px;
 
                     .controls {
                         flex: 1 1 25%;
                         text-align: center;
+
+                        p {
+                            margin: 10px 0px 0px 0px;
+                        }
                     }
 
                     div.mobile {
