--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -396,6 +396,14 @@ html {
                         p {
                             margin: 15px 0px 0px 0px;
                         }
+
+                        .volumeDown {
+                            margin-right: 30px;
+                        }
+
+                        .volumeUp {
+                            margin-left: 30px;
+                        }
                     }
 
                     .controls, .mobile {
@@ -552,11 +560,19 @@ html {
                     padding-bottom: 15px;
 
                     .controls {
-                        flex: 1 1 25%;
+                        flex: 1 1 30%;
                         text-align: center;
 
                         p {
                             margin: 10px 0px 0px 0px;
+                        }
+
+                        .volumeDown {
+                            margin-right: 10px;
+                        }
+
+                        .volumeUp {
+                            margin-left: 10px;
                         }
                     }
 
@@ -566,7 +582,7 @@ html {
 
                     .desktop {
                         display: block;
-                        flex: 1 1 75%;
+                        flex: 1 1 70%;
                         text-align: center;
                     }
 
