--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -123,7 +123,7 @@ body main .playList li.active:hover {
 body main .playList li.playList-footer .material-icons {
   border: 2px solid transparent;
   border-radius: 50%;
-  box-shadow: 0 0 0 1px #efdf00 inset, 1px 1px 3px 2px #efdf00 inset;
+  box-shadow: 0 0 0 1px #efdf00 inset, 0px 0px 3px 2px #efdf00 inset;
   cursor: pointer;
   text-shadow: -1px -1px #071a66;
   transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
@@ -137,11 +137,14 @@ body main .playList li.playList-footer .material-icons:hover {
   background-color: #efdf00;
   border: 2px inset #040e36;
   border-radius: 50%;
-  box-shadow: 0 0 0 1px #efdf00 inset, 1px 1px 3px 2px #040e36 inset;
+  box-shadow: 0 0 0 1px #efdf00 inset, 0px 0px 3px 3px #040e36 inset;
   box-sizing: border-box;
   color: #040e36;
   text-shadow: -1px -1px #071a66;
   transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+}
+body main .playList .trackList {
+  font-family: 'Helvetica';
 }
 body #playListData {
   display: none;
@@ -276,6 +279,7 @@ html {
   }
   body main .playList li.playList-header .album {
     align-self: flex-end;
+    cursor: pointer;
     flex: 1 1 40%;
     font-size: 13px;
     order: 4;
@@ -283,6 +287,7 @@ html {
   }
   body main .playList li.playList-header .artist {
     align-self: flex-end;
+    cursor: pointer;
     flex: 1 1 40%;
     font-size: 13px;
     order: 3;
@@ -290,17 +295,21 @@ html {
   }
   body main .playList li.playList-header .duration {
     align-self: flex-start;
+    cursor: pointer;
     flex: 1 1 40%;
     font-size: 10px;
+    margin-bottom: 20px;
     order: 2;
     text-align: right;
   }
   body main .playList li.playList-header .title {
     align-self: flex-start;
+    cursor: pointer;
     flex: 1 1 40%;
     flex-direction: row;
     text-align: left;
     font-size: 13px;
+    margin-bottom: 20px;
     order: 1;
   }
   body main .playList li.playList-footer {
@@ -418,22 +427,26 @@ html {
   }
   body main .playList li.playList-header .album,
   body main .playList .trackList .album {
+    cursor: pointer;
     flex: 1 1 27%;
     text-align: center;
   }
   body main .playList li.playList-header .artist,
   body main .playList .trackList .artist {
+    cursor: pointer;
     flex: 1 1 16%;
     text-align: center;
   }
   body main .playList li.playList-header .duration,
   body main .playList .trackList .duration {
+    cursor: pointer;
     flex: 1 1 12%;
     order: 4;
     text-align: center;
   }
   body main .playList li.playList-header .title,
   body main .playList .trackList .title {
+    cursor: pointer;
     flex: 1 1 44%;
     flex-direction: row;
     text-align: center;
